did front page, still gotta fix sizing+fonts for smaller screens

--- a/css/site-specific.css
+++ b/css/site-specific.css
@@ -5,7 +5,7 @@ font-family: 'Wire One', sans-serif;
 font-family: 'Amiko', sans-serif; */
 
 body{
-    font-family: 'Roboto Condensed', helvetica, sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 /*navbar styling*/
@@ -124,7 +124,7 @@ h3 {
 }
 
 p {
-    font-family: 'Amiko', sans-serif; 
+    font-family: 'Montserrat', sans-serif; 
     font-weight: 400;
     font-size: 1em;
     text-align: left;
@@ -221,36 +221,44 @@ p.quote{
 
 /*styling for entire title page basically*/
 .title{
-    padding: 10% 0 0 0; /* top|right|bottom|left */ 
+    padding: 20% 0 20% 1%; /* top|right|bottom|left */ 
     margin: auto;
     max-height: 100%;
     vertical-align: center;
 }
 
 h1 {
-    font-family: 'Montserrat', sans-serif; 
-    font-weight: 900;
-    font-size: 3em;
-    text-align: center;
-    padding: 1.5% 0 0 0; 
-    line-height: 40%;
+    font-weight: 200;
+    color: #545454;
+    font-size: 1.05em;
+    text-align: left;
+    line-height: 8%;
+    padding-top: 1%;
+}
+
+h1#footer{
+    font-size: .75em;
+    color: #a9a9a9;
+    font-weight: 100;
+    bottom: .5em;
+    position: absolute;
     text-transform: uppercase;
 }
 
 p.index-link-styling{
-    font-family: 'Montserrat', sans-serif; 
-    font-weight: 400;
-    font-size: 2em;
-    text-align: center;
-    bottom: 0;
+    font-weight: 800;
+    font-size: 5em;
+    text-align: left;
+    line-height: 0.85em;
 }
 
-a.index-link-styling{
-    font-family: 'Montserrat', sans-serif; 
-    font-weight: 400;
+a#indexLinkSmall{
+    font-weight: 500;
     font-size: 2em;
-    text-align: center;
-    bottom: 0;
+    text-align: left;
+    line-height: 1.3em;
+    color: #000;
+    padding-top: 1%;
 }
 
 h2 {
@@ -259,6 +267,13 @@ h2 {
     color: #C3C0C0;
     bottom: 0%;
     margin-top: 1em;
+}
+
+.index-link-styling a:hover{
+    background-color: transparent;
+    font-weight: bold;
+    color: #000;
+    border-bottom: .05em solid #33000d;
 }
 
 /* responsive styling for font size in landing page*/
