--- a/css/site-specific.css
+++ b/css/site-specific.css
@@ -9,10 +9,71 @@ body{
     padding-top: 50px;
 }
 
-.main-container {
+/*.main-container {
   padding: 40px 15px;
 }
+*/
 
+.thumbnail {
+    border: .2px solid red;
+    opacity: 1;
+    background: black;
+    padding: 1% !important;
+    margin: 0 !important;
+}
+
+.thumbnail:hover img{
+    opacity: 0.3;
+}
+
+.thumbnail:hover p{
+    margin-left: 1%;
+    opacity: 1;
+    padding-left: 0;
+}
+
+.thumbnailTitle {
+    position: absolute;
+    top: 0;
+    padding: 2%;
+    margin: 2%;
+    background-color: rgba(255,255,255,0.7);
+}
+
+.thumbnailInfo{
+    position: absolute;
+    opacity: 0;
+    bottom: 2em;
+    font-size: 3em;
+    text-align: left;
+    vertical-align: center;
+    color: solid black;
+}
+
+.thumbnailTags{
+    position: absolute;
+    bottom: 0 !important;
+    opacity: 0;
+}
+
+#scrollTopBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: red; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+}
+
+#scrollTopBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+}
 /*navbar styling*/
 .navbar{
     background-color: #fff;
@@ -89,228 +150,228 @@ a.navbar-brand:hover{
 }
 
 /*modifies styling of navbar right */
-.navbar-right a{
-    font-family: 'Amiko', sans-serif;   
-    color: #3c3c3c;
-    font-weight: 400;
-    font-size: 1.1em;
-    text-transform: uppercase;
-}
+    .navbar-right a{
+        font-family: 'Amiko', sans-serif;   
+        color: #3c3c3c;
+        font-weight: 400;
+        font-size: 1.1em;
+        text-transform: uppercase;
+    }
 
-.nav li a{
-    margin-bottom: 0;
-    margin-top:0;
-}
+    .nav li a{
+        margin-bottom: 0;
+        margin-top:0;
+    }
 
-.nav li a:hover{
-    background-color: transparent;
-    font-weight: bold;
-    color: #000;
-    border-bottom: .05em solid #33000d;
-}
+    .nav li a:hover{
+        background-color: transparent;
+        font-weight: bold;
+        color: #000;
+        border-bottom: .05em solid #33000d;
+    }
 
 /* collapsed menu*/
-.navbar-nav {
-    color: #000;
-    text-align: center;
-}
+    .navbar-nav {
+        color: #000;
+        text-align: center;
+    }
 
 
 /*General style*/
 
 /*individual pages style*/
-h3 {
-    font-family: 'Amiko', sans-serif; 
-    font-weight: 500;
-    font-size: 2.3em;
-    text-align: left;
-    padding: 1.5% 0 0 0; 
-    color: #252525;
-}
+    h3 {
+        font-family: 'Amiko', sans-serif; 
+        font-weight: 500;
+        font-size: 2.3em;
+        text-align: left;
+        padding: 1.5% 0 0 0; 
+        color: #252525;
+    }
 
-p {
-    font-family: 'Montserrat', sans-serif; 
-    font-weight: 400;
-    font-size: 1em;
-    text-align: left;
-    padding: 0 0 0 0; 
-    color: #4d4d4d;
-}
+    p {
+        font-family: 'Montserrat', sans-serif; 
+        font-weight: 400;
+        font-size: 1em;
+        text-align: left;
+        padding: 0 0 0 0; 
+        color: #4d4d4d;
+    }
 
-h4 {
-    font-family: 'Amiko', sans-serif; 
-    font-weight: 500;
-    font-size: 1.2em;
-    text-align: left;
-    padding: 1.5% 0 0 0; 
-    color: #252525;
-    text-transform: uppercase;
-}
+    h4 {
+        font-family: 'Amiko', sans-serif; 
+        font-weight: 500;
+        font-size: 1.2em;
+        text-align: left;
+        padding: 1.5% 0 0 0; 
+        color: #252525;
+        text-transform: uppercase;
+    }
 
-h4 img{
-    width: 100%;
-    height: auto;
-}
+    h4 img{
+        width: 100%;
+        height: auto;
+    }
 
-p.quote{
-    font-family: 'Amiko', sans-serif; 
-    font-weight: 400;
-    font-size: 3em;
-    text-align: center;
-    padding: 1.5% 0 0 0; 
-    color: #484848;
-}
+    p.quote{
+        font-family: 'Amiko', sans-serif; 
+        font-weight: 400;
+        font-size: 3em;
+        text-align: center;
+        padding: 1.5% 0 0 0; 
+        color: #484848;
+    }
 
 /*styles text that spans page to full bleed*/
-.col-md-12 p{
-    padding-right: 25%;
-    text-align: left;
-    height: auto;
-}
+    .col-md-12 p{
+        padding-right: 25%;
+        text-align: left;
+        height: auto;
+    }
 
-/*sizes images*/
-.col-md-2 img{
-    width: 100%;
-    height: auto;
-    padding: 0 0 0 0; 
-}
-.col-md-4 img{
-    width: 100%;
-    height: auto;
-    padding: 0 0 0 0; 
-}
-.col-md-5 img{
-    width: 82%;
-    height: auto;
-    padding: 0 0 0 0; 
-}
-.col-md-6 img{
-    width: 100%;
-    height: auto;
-    padding: 0 0 0 0; 
-}
-.col-md-8 img{
-    width: 100%;
-    height: auto;
-    padding: 0 0 0 0; 
-}
+    /*sizes images*/
+    .col-md-2 img{
+        width: 100%;
+        height: auto;
+        padding: 0 0 0 0; 
+    }
+    .col-md-4 img{
+        width: 100%;
+        height: auto;
+        padding: 0 0 0 0; 
+    }
+    .col-md-5 img{
+        width: 82%;
+        height: auto;
+        padding: 0 0 0 0; 
+    }
+    .col-md-6 img{
+        width: 100%;
+        height: auto;
+        padding: 0 0 0 0; 
+    }
+    .col-md-8 img{
+        width: 100%;
+        height: auto;
+        padding: 0 0 0 0; 
+    }
 
-.col-md-10 img{
-    width: 100%;
-    height: auto;
-    padding: 0 0 0 0; 
-}
-.col-md-12 img{
-    width: 100%;
-    height: auto;
-    padding: 0 0 0 0;
-}
+    .col-md-10 img{
+        width: 100%;
+        height: auto;
+        padding: 0 0 0 0; 
+    }
+    .col-md-12 img{
+        width: 100%;
+        height: auto;
+        padding: 0 0 0 0;
+    }
 
-#homeimage img{
-    padding: 0;
-    margin: auto;
-    width: 100%;
-    overflow: hidden;
-}
+    #homeimage img{
+        padding: 0;
+        margin: auto;
+        width: 100%;
+        overflow: hidden;
+    }
 
-/*landing page style*/
-/*adds background to text*/
-.backgroundcliptext .index-link-styling a,p{
-    background-color: transparent;
-    font-weight: bold;
-    color: #000;
-}
+    /*landing page style*/
+    /*adds background to text*/
+    .backgroundcliptext .index-link-styling a,p{
+        background-color: transparent;
+        font-weight: bold;
+        color: #000;
+    }
 
-.index-link-styling a:hover{
-    background-color: transparent;
-    font-weight: bold;
-    color: #000;
-    color: transparent;
-    background-clip: text;
-    -webkit-background-clip: text;
-    background-image: url(../img/background_text.png);
-    text-decoration: none;
-    border-image: url(../img/background_text.png) 25 30 10 20 repeat;
-}
+    .index-link-styling a:hover{
+        background-color: transparent;
+        font-weight: bold;
+        color: #000;
+        color: transparent;
+        background-clip: text;
+        -webkit-background-clip: text;
+        background-image: url(../img/background_text.png);
+        text-decoration: none;
+        border-image: url(../img/background_text.png) 25 30 10 20 repeat;
+    }
 
 /*styling for entire title page basically*/
-.title{
-    padding: 20% 0 20% 1%; /* top|right|bottom|left */ 
-    margin: auto;
-    max-height: 100%;
-    vertical-align: center;
-}
+    .title{
+        padding: 20% 0 20% 1%; /* top|right|bottom|left */ 
+        margin: auto;
+        max-height: 100%;
+        vertical-align: center;
+    }
 
-h1 {
-    font-weight: 200;
-    color: #545454;
-    font-size: 1.05em;
-    text-align: left;
-    line-height: 8%;
-    padding-top: 1%;
-}
+    h1 {
+        font-weight: 200;
+        color: #545454;
+        font-size: 1.05em;
+        text-align: left;
+        line-height: 8%;
+        padding-top: 1%;
+    }
 
-h1#footer{
-    font-size: .75em;
-    color: #a9a9a9;
-    font-weight: 100;
-    bottom: .5em;
-    position: absolute;
-    text-transform: uppercase;
-}
+    h1#footer{
+        font-size: .75em;
+        color: #a9a9a9;
+        font-weight: 100;
+        bottom: .5em;
+        position: absolute;
+        text-transform: uppercase;
+    }
 
-p.index-link-styling{
-    font-weight: 800;
-    font-size: 5em;
-    text-align: left;
-    line-height: 0.85em;
-}
+    p.index-link-styling{
+        font-weight: 800;
+        font-size: 5em;
+        text-align: left;
+        line-height: 0.85em;
+    }
 
-a#indexLinkSmall{
-    font-weight: 500;
-    font-size: 2em;
-    text-align: left;
-    line-height: 1.3em;
-    color: #000;
-    padding-top: 1%;
-}
+    a#indexLinkSmall{
+        font-weight: 500;
+        font-size: 2em;
+        text-align: left;
+        line-height: 1.3em;
+        color: #000;
+        padding-top: 1%;
+    }
 
-h2 {
-    font-family: 'Roboto', sans-serif;
-    font-size: 1em;
-    color: #C3C0C0;
-    bottom: 0%;
-    margin-top: 1em;
-}
+    h2 {
+        font-family: 'Roboto', sans-serif;
+        font-size: 1em;
+        color: #C3C0C0;
+        bottom: 0%;
+        margin-top: 1em;
+    }
 
 
 /* responsive styling for font size in landing page*/
-@media screen and (max-width: 1000px) {
-    h1 {
-        font-size: 8em;
+    @media screen and (max-width: 1000px) {
+        h1 {
+            font-size: 8em;
+        }
+
+        p.index-link-styling{
+            font-size: 4em;
+        }
     }
 
-    p.index-link-styling{
-        font-size: 4em;
+    @media screen and (max-width: 815px) {
+        h1 {
+            font-size: 6em;
+        }
+        
+        p.index-link-styling{
+            font-size: 3em;
+        }
     }
-}
 
-@media screen and (max-width: 815px) {
-    h1 {
-        font-size: 6em;
+    @media screen and (max-width: 615px) {
+        h1 {
+            font-size: 4em;
+        }
+        
+        p.index-link-styling{
+            font-size: 2em;
+        }
     }
-    
-    p.index-link-styling{
-        font-size: 3em;
-    }
-}
-
-@media screen and (max-width: 615px) {
-    h1 {
-        font-size: 4em;
-    }
-    
-    p.index-link-styling{
-        font-size: 2em;
-    }
-}
