finished functionality home page

--- a/css/site-specific.css
+++ b/css/site-specific.css
@@ -9,27 +9,25 @@ body{
     padding-top: 50px;
 }
 
-/*.main-container {
-  padding: 40px 15px;
+.main-container {
+  /*padding: 40px 15px;*/
 }
-*/
+
+.tab-content {
+    padding-top: 3%;
+}
+.col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
+    padding: 0 !important;
+}
 
 .thumbnail {
     border: .2px solid red;
     opacity: 1;
-    background: black;
-    padding: 1% !important;
-    margin: 0 !important;
-}
-
-.thumbnail:hover img{
-    opacity: 0.3;
-}
-
-.thumbnail:hover p{
-    margin-left: 1%;
-    opacity: 1;
-    padding-left: 0;
+    background: black !important;
+    padding: 0 !important;
+    padding-right: 0 !important;
+    margin-bottom: 0 !important;
+    border: none !important;
 }
 
 .thumbnailTitle {
@@ -40,13 +38,22 @@ body{
     background-color: rgba(255,255,255,0.7);
 }
 
+.thumbnail:hover img{
+    opacity: 0.3;
+}
+
+.thumbnail:hover p{
+    margin-left: 1%;
+    opacity: 1;
+}
+
 .thumbnailInfo{
     position: absolute;
     opacity: 0;
-    bottom: 2em;
-    font-size: 3em;
+    bottom: 1em;
+    font-size: 2em;
     text-align: left;
-    vertical-align: center;
+    margin: 0;
     color: solid black;
 }
 
@@ -54,6 +61,7 @@ body{
     position: absolute;
     bottom: 0 !important;
     opacity: 0;
+    margin: 0;
 }
 
 #scrollTopBtn {
