--- a/css/site-specific.css
+++ b/css/site-specific.css
@@ -11,9 +11,14 @@ body{
 
 /*---- side panel ----*/
     .sidePanel .col-md-3{
-        position: fixed;
+        position: absolute;
+        display: block;
         left: 0;
         padding: 2% !important;
+    }
+
+    .tab-content .col-md-4{
+
     }
 
     .sidePanel .col-md-3 h3{
@@ -64,7 +69,7 @@ body{
         margin-bottom: 0 !important;
         padding: 0 !important;
         border-radius: .5em !important;
-        border: dashed;
+        border: 0.25px dotted #337ab7 !important;
     }
 
     .thumbnail img{
@@ -77,11 +82,10 @@ body{
         padding: 2%;
         margin: 2%;
         border-radius: .5em;
-        border: 1px dotted #b2b2b2;
     }
 
     h3.thumbnailTitle{
-        background-color: rgba(255,255,255,0.7);
+        background-color: rgba(228,240,246,0.5);
         color: #000;
         font-size: 1.1em;
     }
