--- a/css/site-specific.css
+++ b/css/site-specific.css
@@ -7,6 +7,7 @@ font-family: 'Amiko', sans-serif; */
 body{
     font-family: 'Montserrat', sans-serif !important;
     padding-top: 50px;
+    font-size: 10px;
 }
 
 /*---- side panel ----*/
@@ -132,7 +133,6 @@ body{
 /*navbar styling on top*/
     .navbar{
         background-color: #fff;
-        border-bottom: .15em solid #33000d;
         margin-bottom: 0;
     }
 
@@ -146,14 +146,18 @@ body{
     }
     /*FOR ACTIVE TAB ON TOP*/
     .navbar-inverse .navbar-nav>.active>a{
-        background: rgba(0,0,0,0.1) !important;
-        text-transform: uppercase;
+        text-transform: none;
         font-weight: 800;
-        color:#000 !important;
+        color:rgba(39,52,52,.38) !important;
+        border-bottom-color: #fff;
+    }
+
+    .navbar-inverse .navbar-nav>.active>a:hover{
+        background: rgba(0,0,0,0.1) !important;
     }
 
     .navbar-inverse .navbar-nav>li>a{
-        color: #000 !important;
+        color: #9d9d9d !important;
     }
 
     .navbar-inverse .navbar-brand{
